Done with chapter 1-3, 4ish, and Appendix

--- a/code/3D Training.ipynb
+++ b/code/3D Training.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -48,11 +50,17 @@
    "source": [
     "dataset_folder = './../../../datasets/'\n",
     "# Dataframe with results\n",
-    "df_snemi = pandas.DataFrame(index=['VD2D-3D', 'U-Net 3D'],\n",
+    "df_snemi = pandas.DataFrame(index=['VD2D-3D', 'UVR-Net'],\n",
     "                            columns=['Pixel Error', 'Rand - Full', 'Rand - Merge', 'Rand - Split'])\n",
     "\n",
-    "df_cremi = pandas.DataFrame(index=['Unaligned Cremi', 'Aligned Cremi'], \n",
-    "                            columns=['Pixel Error', 'Rand - Full', 'Rand - Merge', 'Rand - Split'])"
+    "df_cremi_a = pandas.DataFrame(index=['VD2D-3D', 'UVR-Net'], \n",
+    "                              columns=['Pixel Error', 'Rand - Full', 'Rand - Merge', 'Rand - Split'])\n",
+    "\n",
+    "df_cremi_b = pandas.DataFrame(index=['VD2D-3D', 'UVR-Net'], \n",
+    "                              columns=['Pixel Error', 'Rand - Full', 'Rand - Merge', 'Rand - Split'])\n",
+    "\n",
+    "df_cremi_c = pandas.DataFrame(index=['VD2D-3D', 'UVR-Net'], \n",
+    "                              columns=['Pixel Error', 'Rand - Full', 'Rand - Merge', 'Rand - Split'])"
    ]
   },
   {
@@ -78,7 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tf.reset_default_graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +117,7 @@
     "    training_params=com.TrainingParams(\n",
     "        optimizer=tf.train.AdamOptimizer,\n",
     "        learning_rate=0.0001,\n",
-    "        n_iterations=15000,\n",
+    "        n_iterations=30000,\n",
     "        patch_shape=(16, 160, 160),\n",
     "        batch_size=1\n",
     "    ),\n",
@@ -111,15 +130,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training for 30000 iterations\n",
-      "0\n"
+      "INFO:tensorflow:Restoring parameters from ./../../../datasets//snemi3d/results/vd2d_3d/run-1/model.ckpt\n",
+      "Model restored.\n"
      ]
     }
    ],
@@ -130,16 +149,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z=0, y=0, x=0\n",
+      "z=0, y=0, x=160\n",
+      "z=0, y=0, x=320\n",
+      "z=0, y=0, x=480\n",
+      "z=0, y=0, x=640\n",
+      "z=0, y=0, x=800\n",
+      "z=0, y=0, x=960\n",
+      "z=0, y=160, x=0\n",
+      "z=0, y=160, x=160\n",
+      "z=0, y=160, x=320\n",
+      "z=0, y=160, x=480\n",
+      "z=0, y=160, x=640\n",
+      "z=0, y=160, x=800\n",
+      "z=0, y=160, x=960\n",
+      "z=0, y=320, x=0\n",
+      "z=0, y=320, x=160\n",
+      "z=0, y=320, x=320\n",
+      "z=0, y=320, x=480\n",
+      "z=0, y=320, x=640\n",
+      "z=0, y=320, x=800\n",
+      "z=0, y=320, x=960\n",
+      "z=0, y=480, x=0\n",
+      "z=0, y=480, x=160\n",
+      "z=0, y=480, x=320\n",
+      "z=0, y=480, x=480\n",
+      "z=0, y=480, x=640\n",
+      "z=0, y=480, x=800\n",
+      "z=0, y=480, x=960\n",
+      "z=0, y=640, x=0\n",
+      "z=0, y=640, x=160\n",
+      "z=0, y=640, x=320\n",
+      "z=0, y=640, x=480\n",
+      "z=0, y=640, x=640\n",
+      "z=0, y=640, x=800\n",
+      "z=0, y=640, x=960\n",
+      "z=0, y=800, x=0\n",
+      "z=0, y=800, x=160\n",
+      "z=0, y=800, x=320\n",
+      "z=0, y=800, x=480\n",
+      "z=0, y=800, x=640\n",
+      "z=0, y=800, x=800\n",
+      "z=0, y=800, x=960\n",
+      "z=0, y=960, x=0\n",
+      "z=0, y=960, x=160\n",
+      "z=0, y=960, x=320\n",
+      "z=0, y=960, x=480\n",
+      "z=0, y=960, x=640\n",
+      "z=0, y=960, x=800\n",
+      "z=0, y=960, x=960\n",
+      "z=16, y=0, x=0\n",
+      "z=16, y=0, x=160\n",
+      "z=16, y=0, x=320\n",
+      "z=16, y=0, x=480\n",
+      "z=16, y=0, x=640\n",
+      "z=16, y=0, x=800\n",
+      "z=16, y=0, x=960\n",
+      "z=16, y=160, x=0\n",
+      "z=16, y=160, x=160\n",
+      "z=16, y=160, x=320\n",
+      "z=16, y=160, x=480\n",
+      "z=16, y=160, x=640\n",
+      "z=16, y=160, x=800\n",
+      "z=16, y=160, x=960\n",
+      "z=16, y=320, x=0\n",
+      "z=16, y=320, x=160\n",
+      "z=16, y=320, x=320\n",
+      "z=16, y=320, x=480\n",
+      "z=16, y=320, x=640\n",
+      "z=16, y=320, x=800\n",
+      "z=16, y=320, x=960\n",
+      "z=16, y=480, x=0\n",
+      "z=16, y=480, x=160\n",
+      "z=16, y=480, x=320\n",
+      "z=16, y=480, x=480\n",
+      "z=16, y=480, x=640\n",
+      "z=16, y=480, x=800\n",
+      "z=16, y=480, x=960\n",
+      "z=16, y=640, x=0\n",
+      "z=16, y=640, x=160\n",
+      "z=16, y=640, x=320\n",
+      "z=16, y=640, x=480\n",
+      "z=16, y=640, x=640\n",
+      "z=16, y=640, x=800\n",
+      "z=16, y=640, x=960\n",
+      "z=16, y=800, x=0\n",
+      "z=16, y=800, x=160\n",
+      "z=16, y=800, x=320\n",
+      "z=16, y=800, x=480\n",
+      "z=16, y=800, x=640\n",
+      "z=16, y=800, x=800\n",
+      "z=16, y=800, x=960\n",
+      "z=16, y=960, x=0\n",
+      "z=16, y=960, x=160\n",
+      "z=16, y=960, x=320\n",
+      "z=16, y=960, x=480\n",
+      "z=16, y=960, x=640\n",
+      "z=16, y=960, x=800\n",
+      "z=16, y=960, x=960\n",
+      "(24, 1023, 1023)\n",
+      "Begin segmentation\n",
+      "Segmentation complete\n",
+      "Performing foreground-restriction\n",
+      "Finding overlap matrix...\n",
+      "Completed in 4.640195 seconds\n",
+      "Calculating Rand F-Score...\n",
+      "Completed in 0.094320 seconds\n",
+      "VD2D-3D\n",
+      "Pixel Error: 0.121826\n",
+      "Rand - Full: 0.759678\n",
+      "Rand - Merge: 0.987228\n",
+      "Rand - Split: 0.617377\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute metrics on the validation set\n",
     "val_inputs, val_labels, val_target = dset_sampler.get_validation_set()\n",
     "preds, p_error, rand_full, rand_merge, rand_split = get_metrics(pipeline, classifier, val_inputs, val_labels, val_target)\n",
-    "print_and_save_metrics('VD2D-3D', df, p_error, rand_full, rand_merge, rand_split)"
+    "print_and_save_metrics('VD2D-3D', df_snemi, p_error, rand_full, rand_merge, rand_split)"
    ]
   },
   {
@@ -182,7 +319,7 @@
     "    training_params=com.TrainingParams(\n",
     "        optimizer=tf.train.AdamOptimizer,\n",
     "        learning_rate=0.0001,\n",
-    "        n_iterations=15000,\n",
+    "        n_iterations=30000,\n",
     "        patch_shape=(16, 160, 160),\n",
     "        batch_size=1\n",
     "    ),\n",
@@ -2993,8 +3130,8 @@
     }
    ],
    "source": [
-    "classifier, dset_sampler = run_full_training(pipeline, run_name='1')\n",
-    "# classifier, dset_sampler = load_classifier(pipeline, run_name='aug')"
+    "# classifier, dset_sampler = run_full_training(pipeline, run_name='2')\n",
+    "classifier, dset_sampler = load_classifier(pipeline, run_name='2')"
    ]
   },
   {
@@ -3008,7 +3145,7 @@
     "# Compute metrics on the validation set\n",
     "val_inputs, val_labels, val_target = dset_sampler.get_validation_set()\n",
     "preds, p_error, rand_full, rand_merge, rand_split = get_metrics(pipeline, classifier, val_inputs, val_labels, val_target)\n",
-    "print_and_save_metrics('U-Net 3D', df, p_error, rand_full, rand_merge, rand_split)"
+    "print_and_save_metrics('UVR-Net', df_snemi, p_error, rand_full, rand_merge, rand_split)"
    ]
   },
   {
@@ -3016,6 +3153,83 @@
    "metadata": {},
    "source": [
     "## CREMI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CREMI A Unaligned, with VD2D-3D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tf.reset_default_graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pipeline = com.PipelineConfig(\n",
+    "    data_path=dataset_folder + '/cremi/a/',\n",
+    "    dataset_constructor=dat.CREMIDataset,\n",
+    "    model_constructor=mod.ConvNet,\n",
+    "    augmentation_config=com.AugmentationConfig(\n",
+    "        apply_mirroring=True, \n",
+    "        apply_flipping=True, \n",
+    "        apply_rotation=True, \n",
+    "        apply_blur=True\n",
+    "    ),\n",
+    "    model_arch=mod.VD2D_3D,\n",
+    "    training_params=com.TrainingParams(\n",
+    "        optimizer=tf.train.AdamOptimizer,\n",
+    "        learning_rate=0.0001,\n",
+    "        n_iterations=30000,\n",
+    "        patch_shape=(16, 160, 160),\n",
+    "        batch_size=1\n",
+    "    ),\n",
+    "    inference_params=com.InferenceParams(\n",
+    "        patch_shape=(16, 160, 160)\n",
+    "    ),\n",
+    "    pipeline_name='vd2d-3d'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# classifier, dset_sampler = run_full_training(pipeline, run_name='1')\n",
+    "classifier, dset_sampler = load_classifier(pipeline, run_name='1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Compute metrics on the validation set\n",
+    "val_inputs, val_labels, val_target = dset_sampler.get_validation_set()\n",
+    "preds, p_error, rand_full, rand_merge, rand_split = get_metrics(pipeline, classifier, val_inputs, val_labels, val_target)\n",
+    "print_and_save_metrics('VD2D_3D', df_cremi_a, p_error, rand_full, rand_merge, rand_split)"
    ]
   },
   {
@@ -3058,7 +3272,7 @@
     "    training_params=com.TrainingParams(\n",
     "        optimizer=tf.train.AdamOptimizer,\n",
     "        learning_rate=0.0001,\n",
-    "        n_iterations=15000,\n",
+    "        n_iterations=30000,\n",
     "        patch_shape=(16, 160, 160),\n",
     "        batch_size=1\n",
     "    ),\n",
@@ -3092,14 +3306,14 @@
     "# Compute metrics on the validation set\n",
     "val_inputs, val_labels, val_target = dset_sampler.get_validation_set()\n",
     "preds, p_error, rand_full, rand_merge, rand_split = get_metrics(pipeline, classifier, val_inputs, val_labels, val_target)\n",
-    "print_and_save_metrics('Unaligned Cremi', df, p_error, rand_full, rand_merge, rand_split)"
+    "print_and_save_metrics('UVR-Net', df_cremi_a, p_error, rand_full, rand_merge, rand_split)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CREMI A Aligned, with U-Net 3D"
+    "### Cremi B unaligned, VD2D-3D"
    ]
   },
   {
@@ -3122,7 +3336,84 @@
    "outputs": [],
    "source": [
     "pipeline = com.PipelineConfig(\n",
-    "    data_path=dataset_folder + '/cremi/a/',\n",
+    "    data_path=dataset_folder + '/cremi/b/',\n",
+    "    dataset_constructor=dat.CREMIDataset,\n",
+    "    model_constructor=mod.ConvNet,\n",
+    "    augmentation_config=com.AugmentationConfig(\n",
+    "        apply_mirroring=True, \n",
+    "        apply_flipping=True, \n",
+    "        apply_rotation=True, \n",
+    "        apply_blur=True\n",
+    "    ),\n",
+    "    model_arch=mod.VD2D_3D,\n",
+    "    training_params=com.TrainingParams(\n",
+    "        optimizer=tf.train.AdamOptimizer,\n",
+    "        learning_rate=0.0001,\n",
+    "        n_iterations=30000,\n",
+    "        patch_shape=(16, 160, 160),\n",
+    "        batch_size=1\n",
+    "    ),\n",
+    "    inference_params=com.InferenceParams(\n",
+    "        patch_shape=(16, 160, 160)\n",
+    "    ),\n",
+    "    pipeline_name='vd2d-3d'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# classifier, dset_sampler = run_full_training(pipeline, run_name='1')\n",
+    "classifier, dset_sampler = load_classifier(pipeline, run_name='1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Compute metrics on the validation set\n",
+    "val_inputs, val_labels, val_target = dset_sampler.get_validation_set()\n",
+    "preds, p_error, rand_full, rand_merge, rand_split = get_metrics(pipeline, classifier, val_inputs, val_labels, val_target)\n",
+    "print_and_save_metrics('UVR-Net', df_cremi_b, p_error, rand_full, rand_merge, rand_split)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cremi B unaligned, U-Net 3D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tf.reset_default_graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pipeline = com.PipelineConfig(\n",
+    "    data_path=dataset_folder + '/cremi/b/',\n",
     "    dataset_constructor=dat.CREMIDataset,\n",
     "    model_constructor=mod.UNet,\n",
     "    augmentation_config=com.AugmentationConfig(\n",
@@ -3135,7 +3426,7 @@
     "    training_params=com.TrainingParams(\n",
     "        optimizer=tf.train.AdamOptimizer,\n",
     "        learning_rate=0.0001,\n",
-    "        n_iterations=15000,\n",
+    "        n_iterations=30000,\n",
     "        patch_shape=(16, 160, 160),\n",
     "        batch_size=1\n",
     "    ),\n",
@@ -3169,7 +3460,161 @@
     "# Compute metrics on the validation set\n",
     "val_inputs, val_labels, val_target = dset_sampler.get_validation_set()\n",
     "preds, p_error, rand_full, rand_merge, rand_split = get_metrics(pipeline, classifier, val_inputs, val_labels, val_target)\n",
-    "print_and_save_metrics('Aligned Cremi', df, p_error, rand_full, rand_merge, rand_split)"
+    "print_and_save_metrics('UVR-Net', df_cremi_b, p_error, rand_full, rand_merge, rand_split)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cremi C unaligned, VD2D-3D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tf.reset_default_graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pipeline = com.PipelineConfig(\n",
+    "    data_path=dataset_folder + '/cremi/c/',\n",
+    "    dataset_constructor=dat.CREMIDataset,\n",
+    "    model_constructor=mod.ConvNet,\n",
+    "    augmentation_config=com.AugmentationConfig(\n",
+    "        apply_mirroring=True, \n",
+    "        apply_flipping=True, \n",
+    "        apply_rotation=True, \n",
+    "        apply_blur=True\n",
+    "    ),\n",
+    "    model_arch=mod.VD2D_3D,\n",
+    "    training_params=com.TrainingParams(\n",
+    "        optimizer=tf.train.AdamOptimizer,\n",
+    "        learning_rate=0.0001,\n",
+    "        n_iterations=30000,\n",
+    "        patch_shape=(16, 160, 160),\n",
+    "        batch_size=1\n",
+    "    ),\n",
+    "    inference_params=com.InferenceParams(\n",
+    "        patch_shape=(16, 160, 160)\n",
+    "    ),\n",
+    "    pipeline_name='vd2d-3d'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# classifier, dset_sampler = run_full_training(pipeline, run_name='1')\n",
+    "classifier, dset_sampler = load_classifier(pipeline, run_name='1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Compute metrics on the validation set\n",
+    "val_inputs, val_labels, val_target = dset_sampler.get_validation_set()\n",
+    "preds, p_error, rand_full, rand_merge, rand_split = get_metrics(pipeline, classifier, val_inputs, val_labels, val_target)\n",
+    "print_and_save_metrics('VD2D-3D', df_cremi_c, p_error, rand_full, rand_merge, rand_split)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cremi C unaligned, U-Net 3D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tf.reset_default_graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pipeline = com.PipelineConfig(\n",
+    "    data_path=dataset_folder + '/cremi/b/',\n",
+    "    dataset_constructor=dat.CREMIDataset,\n",
+    "    model_constructor=mod.UNet,\n",
+    "    augmentation_config=com.AugmentationConfig(\n",
+    "        apply_mirroring=True, \n",
+    "        apply_flipping=True, \n",
+    "        apply_rotation=True, \n",
+    "        apply_blur=True\n",
+    "    ),\n",
+    "    model_arch=mod.UNET_3D_4LAYERS,\n",
+    "    training_params=com.TrainingParams(\n",
+    "        optimizer=tf.train.AdamOptimizer,\n",
+    "        learning_rate=0.0001,\n",
+    "        n_iterations=30000,\n",
+    "        patch_shape=(16, 160, 160),\n",
+    "        batch_size=1\n",
+    "    ),\n",
+    "    inference_params=com.InferenceParams(\n",
+    "        patch_shape=(16, 160, 160)\n",
+    "    ),\n",
+    "    pipeline_name='unet-3d-4layers'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# classifier, dset_sampler = run_full_training(pipeline, run_name='1')\n",
+    "classifier, dset_sampler = load_classifier(pipeline, run_name='1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Compute metrics on the validation set\n",
+    "val_inputs, val_labels, val_target = dset_sampler.get_validation_set()\n",
+    "preds, p_error, rand_full, rand_merge, rand_split = get_metrics(pipeline, classifier, val_inputs, val_labels, val_target)\n",
+    "print_and_save_metrics('UVR-Net', df_cremi_c, p_error, rand_full, rand_merge, rand_split)"
    ]
   },
   {
@@ -3182,8 +3627,12 @@
    "source": [
     "with open('./../tex/tables/3d_snemi_results.tex', 'w') as latex_file:\n",
     "    latex_file.write(df_snemi.to_latex(bold_rows=True))\n",
-    "with open('./../tex/tables/3d_cremi_results.tex', 'w') as latex_file:\n",
-    "    latex_file.write(df_cremi.to_latex(bold_rows=True))"
+    "with open('./../tex/tables/3d_cremi_a_results.tex', 'w') as latex_file:\n",
+    "    latex_file.write(df_cremi_a.to_latex(bold_rows=True))\n",
+    "with open('./../tex/tables/3d_cremi_b_results.tex', 'w') as latex_file:\n",
+    "    latex_file.write(df_cremi_b.to_latex(bold_rows=True))\n",
+    "with open('./../tex/tables/3d_cremi_c_results.tex', 'w') as latex_file:\n",
+    "    latex_file.write(df_cremi_c.to_latex(bold_rows=True))"
    ]
   },
   {
