--- a/code/Setup.ipynb
+++ b/code/Setup.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -48,7 +50,57 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./../../../datasets/snemi3d/train-input.zip Does not exist\n",
+      "downloading http://brainiac2.mit.edu/SNEMI3D/sites/default/files/train-input.zip\n",
+      "./../../../datasets/snemi3d/train-labels.zip Does not exist\n",
+      "downloading http://brainiac2.mit.edu/SNEMI3D/sites/default/files/train-labels.zip\n",
+      "./../../../datasets/snemi3d/test-input.zip Does not exist\n",
+      "downloading http://brainiac2.mit.edu/SNEMI3D/sites/default/files/test-input.zip\n",
+      "splitting train-input.tif into 75.0% training,  25.0% into validation\n",
+      "./../../../datasets/snemi3d/train-input.tif\n",
+      "./../../../datasets/snemi3d/train-labels.tif\n",
+      "created train-input.h5\n",
+      "created train-labels.h5\n",
+      "created validation-input.h5\n",
+      "created validation-labels.h5\n",
+      "created test-input.h5\n",
+      "./../../../datasets/isbi/train-input.tif Does not exist\n",
+      "downloading http://brainiac2.mit.edu/isbi_challenge/sites/default/files/train-volume.tif\n",
+      "./../../../datasets/isbi/train-labels.tif Does not exist\n",
+      "downloading http://brainiac2.mit.edu/isbi_challenge/sites/default/files/train-labels.tif\n",
+      "./../../../datasets/isbi/test-input.tif Does not exist\n",
+      "downloading http://brainiac2.mit.edu/isbi_challenge/sites/default/files/test-volume.tif\n",
+      "splitting train-input.tif into 75.0% training,  25.0% into validation\n",
+      "./../../../datasets/isbi/train-input.tif\n",
+      "./../../../datasets/isbi/train-labels.tif\n",
+      "created train-input.h5\n",
+      "created train-labels.h5\n",
+      "created validation-input.h5\n",
+      "created validation-labels.h5\n",
+      "created test-input.h5\n",
+      "./../../../datasets/cremi/a/train-full.hdf Does not exist\n",
+      "downloading https://cremi.org/static/data/sample_A_20160501.hdf\n",
+      "./../../../datasets/cremi/a/test.hdf Does not exist\n",
+      "downloading https://cremi.org/static/data/sample_A%2B_20160601.hdf\n",
+      "./../../../datasets/cremi/b/train-full.hdf Does not exist\n",
+      "downloading https://cremi.org/static/data/sample_B_20160501.hdf\n",
+      "./../../../datasets/cremi/b/test.hdf Does not exist\n",
+      "downloading https://cremi.org/static/data/sample_B%2B_20160601.hdf\n",
+      "./../../../datasets/cremi/c/train-full.hdf Does not exist\n",
+      "downloading https://cremi.org/static/data/sample_C_20160501.hdf\n",
+      "./../../../datasets/cremi/c/test.hdf Does not exist\n",
+      "downloading https://cremi.org/static/data/sample_C%2B_20160601.hdf\n",
+      "splitting ./../../../datasets/cremi/a/train-full.hdf into 80.0% training,  20.0% into validation, and adding borders\n",
+      "splitting ./../../../datasets/cremi/b/train-full.hdf into 80.0% training,  20.0% into validation, and adding borders\n",
+      "splitting ./../../../datasets/cremi/c/train-full.hdf into 80.0% training,  20.0% into validation, and adding borders\n"
+     ]
+    }
+   ],
    "source": [
     "dd.maybe_create_all_datasets(results_folder, 0.75)"
    ]
