--- a/tex/1-intro.tex
+++ b/tex/1-intro.tex
@@ -10,45 +10,46 @@ This thesis is an exploration into various automated methods of reconstructing t
 Throughout our initial exploration of existing EM segmentation methods, it became increasingly clear that, since the output of one stage of the segmentation pipeline feeds directly into the next, errors at any given stage will inevitably propagate to later stages. There are generally two approaches to mitigating this propogation effect: reduce the errors introduced at any given stage (i.e. increase the accuracy of an intermittent neural net), or make subsequent stages more robust to errors in previous stages (i.e. add substantial augmentations to training, apply techniques like Mean Affinity Agglomeration to segmentations). This thesis touches on both types categories of improvement.
 
 While this thesis research was conducted in conjunction with several other undergraduates, graduate students, and a professor in the Princeton Neuroscience Institute, this thesis will detail my individual contribution. Specifically, my contribution can be broken up into three parts:
-
 \begin{itemize}
 \item The creation of the \texttt{DeepSeg} segmentation pipeline, a modular framework written in Python that allows for easy training and prediction with current popular models, as well as easy experimentation at different stages in the computational pipeline.
 \item Experimention with several different architectures for transforming raw segmentation images into affinity/boundary maps, attempting to improve overall accuracy and noting their invariance to errors in earlier stages of the pipeline.
 \item Exploration of learned alignment strategies, both on learned transformations and in an end-to-end setting.
 \end{itemize}
 
+
 \section{Motivation}
 
-In the field of computational neuroscience, there exist a class of problems relating to mapping the neuron-level structure of the brain. For instance, one might want to precisely model the neural connectivity of an abnormal mouse brain, or observe the connectivity and topology of a worm at different stages of its development. Conventionally, the structure of the brain is inferred from images, whether they are thin slices of a brain imaged with an electron microscope, volumetric images acquired using digital radiograhpy systems (i.e. fMRI, CAT, etc), or visible-spectrum video of exposed brain tissue. Although these imaging technique generate information at different resolution levels, they invariably present a huge data problem: when researchers are presented with small-scale image data, it is fundamentally infeasible to efficiently infer the connectivity and structure of a small cluster of neurons by hand, let alone an entire brain or nervous system, simply because the amount of neurons in a brain is too large.
+Understanding the cellular structure and connectivity of neural tissue is perhaps the most important challenge in the field of computational neuroscience today. The accurate generation of a complete neuron connectivity graph of a section of neural tissue would allow researchers to answer a litany of fundamental questions about neural activity at various scales. At the micrometer level, being able to generate connectivity graphs gives us insight into how dense connections are throughout the brain, answers quesions about local clustering and distribution of synapses, and shows us how loosely or strongly coupled neurons can be. 
+
+At the millimeter scale, being able to reconstruct the topology and connectivity in a small region of brain tissue would allow us to understand how entire neurons interact with each other, and how clusters of neurons interact. This scale would allow for queries into specific neural subsystems, especially in very small animals (i.e. insects, small rodents), and perhaps allow us to understand the types of stimuli that affect entire neurons. 
+
+At the centimeter scale, we can map the entire brain of small creatures, and important structures within the human brain. A full map at this level would allow us to query memory structures in small animals, simulate reactions to external stimuli in the optical system, and examine the differences in neural structures between different individuals (at smaller scales, it is difficult to find isomorphic sections of tissue). 
+
+Finally, mapping neural tissue at the scale of the human brain would allow us to begin to be able to answer fundamental quesions about memory, consciousness, and humanity. Given enough computational power, it might even be possible to simulate a specific consciousness. This is quite a lofty goal, especially considering the computational requirements, but advances in automated methods make these tasks more and more plausible.
+
+Conventionally, the structure of the brain is inferred from images, whether they are thin slices of a brain imaged with an electron microscope, volumetric images acquired using digital radiograhpy systems (i.e. fMRI, CAT, etc), or visible-spectrum video of exposed brain tissue. Although these imaging technique generate information at different resolution levels, they invariably present a huge data problem: when researchers are presented with small-scale image data, it is fundamentally infeasible to efficiently infer the connectivity and structure of a small cluster of neurons by hand, let alone an entire brain or nervous system, simply because the amount of neurons in a brain is too large. For several decades now, researchers have had the capability to manually reconstruct the 3D geometry of tissue in tissue volumes at the micrometer scale\cite{White1986}. However, to get to larger scales within acceptible time frames, 
 
 Many attempts have been made to automate the process of inferring connectivity and topology from images using various algorithmic and machine learning models. In the past five years or so, many of the most successful attempts at this class of problems have utilized Convolutional Neural Networks (CNNs) to achieve their high performance. The goal of this year-long project is to explore many of the different CNN-based approaches that have gained recognition in the past few years in several sub-problems, evaluate their performance and enumerate their deficiencies, and attempt to design new architectures that achieve improved performance in these sub-problems. In addition to increasing performance on established benchmarks, we also make contributions on new sub-problems for which there are no established benchmarks.
 
-The motivation for the research in this field is to better understand the connectivity of neural tissue. Since this is such a broad goal, it stands to reason that there a number of intermediary sub-problems that can be tackled to learn about connectivity. Several of the sub-problems have been heavily studied, and various public competitions have been organized that provide labeled training data and unlabled test data, encouraging competitors to achieve maximum performance against a certain benchmark. As we developed our models, we submitted their predictions to several of these open competitions, often performing well.
+The motivation for the research in this field is to better understand the connectivity of neural tissue. Since this is such a broad goal, it stands to reason that there a number of intermediary sub-problems that can be tackled to learn about connectivity. Several of the sub-problems have been heavily studied, and various public competitions have been organized that provide labeled training data and unlabled test data, encouraging competitors to achieve maximum performance against a certain benchmark. As we developed our models, we evaluated their performance on local train sets and submitted their predictions to several of these open competitions, often performing well.
 
 \section{Related Work}
 
-\TODO{Flesh out more background on CNNs}
-\TODO{Semantic Segmentation}
-
 \subsection{Connectomics}
+
+The problem of determining the connectivity of a brain falls in the sub-field of connectomics, which has been a lively area for research for over 30 years. The first full connectome of an organism was created in 1986, producing the mapping of the brain of \textit{C. elegans} \cite{White1986}. Since then, partial and full topological and connectivity maps have been created on various organism, often using electron microscopy and careful hand-reconstruction to do so. One group of researchers from the Allen Institute for Brain Science was able to use the presence of flourescent proteins to construct a cellular-level connectome of a mouse brain (although not at the level of accuracy to reconstruct a true weighted graph of the connectome)\cite{Oh2014}. Other researchers have been able to automatically reconstruct certain cell structures at nano-resolution\cite{Kasthuri2015}. More recently, by genetically modifying organisms to produce proteins that become phosphorescent in the presence of calcium (calcium is released across the synapse between a dendrite and an axon when a neuron is fires), researchers have been able to monitor both brain activity and neural structure using video photography in the visible spectrum \cite{Nguyen2015}. 
 
 \subsection{Image Segmentation}
 
+As the field of connectomics has matured, it seems to have coalesced around the idea that taking electron microscopy images of neural tissue and then performing image segmentation on those images is likely the most promising strategy for acquiring high-resolution neuron graphs. Image segmentation has a long history in the field of computer vision; being able to separate various components of an image has broad applications, and much research been done on the subject. In the early 1980's, state-of-the-art methods of image segmentation techniques involved defining hand-crafted features for local structures within images in order to perform segmentation\cite{Haralick1985}. In the late 1990's and early 2000's, methods began to examine more global image features. For instance, Malik and Shi demonstrated that the segmentatino problem could be formulated as a graph partitioning problem\cite{JianboShi2000}.
+
+A huge breakthough in pixel-level image segmentation occured in 2015, when Long et. al. showed that fully convolutional networks could be used to achieve state-of-the-art semantic segmentation (where semantic segmentation means labeling pixels based on the object that they represent)\cite{Long2014}. Since then, many groups have improved on various techniques for various semantic segmentation domains\cite{Badrinarayanan2015}.
+
 \subsection{EM Segmentation}
 
-\TODO{VD2D, VD2D-3D}
-\TODO{N4}
-\TODO{Res Net}
-\TODO{Segnet}
-\TODO{}
+Because of the acute interest in using EM segmentations to reconstruct neural tissue (and a broader interest in segmenting biological images), many groups have successfully applied segmentation techniques catered specifically to this task. In the early 2010's, a group of researchers published an open dataset and created a global challenge to use machine learning methods to label neurons in 2D image slices of a brain, resulting in the creation of models with near-human accuracy \cite{Arganda-Carreras2015}. The first successful convolution-based model to perform well on this task was the N4 architecture, a fully-convolutional approach to segmentation released in 2012\cite{Cirean}. Many subsequent approaches have drawn on the success of N4's fully-convolutional architecture, including VD2D, and more intricate architectures like Multicut and U-Net\cite{Beier2017,Ronneberger2015}.
 
-\subsection{Alignment}
-
-The problem of determining the connectivity of a brain falls in the sub-field of connectomics, which has been a lively area for research for over 30 years. The first full connectome of an organism was created in 1986, producing the mapping of the brain of \textit{C. elegans} \cite{White1986}. Since then, partial and full topological and connectivity maps have been created on various organism, often using electron microscopy and careful hand-reconstruction to do so. More recently, by genetically modifying organisms to produce proteins that become phosphorescent in the presence of calcium (calcium is released across the synapse between a dendrite and an axon when a neuron is fires), researchers have been able to monitor both brain activity and neural structure using video photography in the visible spectrum \cite{Nguyen2015}.
-
-In terms of the computational approaches to automating connectome reconstruction, many groups have attempted to create systems to accomplish near-human accuracy when labelling neurons in the brain. In the early 2010's, a group of researchers published an open dataset and created a global challenge to use machine learning methods to label neurons in image slices of a brain, resulting in the creation of models with near-human accuracy \cite{Arganda-Carreras2015}. More recently, researchers at Princeton University applied similar approaches to automatically detecting neurons in videos formed with the calcium imaging techniques mentioned above \cite{Apthorpe2016}.
-
-The work in the field continues to improve mapping techniques, but our understanding of learning methods in both computational neuroscience and computer vision are in their infancy, and are not yet practical for deployment on a larger organism (i.e. a human) due to computational and accuracy issues. This project hopes to improve on existing methods, even if incrementally, so that we can better understand what an efficient mapping approach capable of mapping a full brain might look like.
+In the 3D Segmentation domain, significant progress has been made following the ISBI 2013 SNEMI3D challenge\cite{Arganda-Carreras2013}, which challenged entrants to segment 3D EM stacks. Prior to this, it was shown that using convolutional nets to predict 3D affinities could lead to accurate segmentation\cite{Turaga2010}. The aforementioned convolutional models have all been adapted and extended into the 3D domain, with architectures including VD2D-3D\cite{Lee}, 3D U-Net\cite{Cicek2016}, and V-Net\cite{Milletari2016}. Other challenges with different types of data, including CREMI 2016, have also spurred model development\cite{Funke.Jan2016}.
 
 \section{EM Segmentation Pipeline}
 
@@ -64,7 +65,7 @@ The EM Segmentation Pipeline can roughly be separated into five components, show
 \end{figure}
 
 \subsection{Image Acquisition}
-Given a physical volume of neural tissue, the first task in inferring tissue structure is to acquire some sort of digital representation of this tissue. While there are many techniques available for imaging biological tissue (e.g. light microscopy, electron microscopy, radiography, magnetic resonance imaging), typically the only way to acquire a representation of cell-level structures is by using a tunnelling electron microscope (TEM). \TODO{Find a citation for this} Before imaging, samples undergo considerable preparation: typically, they are embedded in a rigid medium that will allow them to be sliced with minimal distortion; additionally some sort of stain is applied to the tissue that affects the electrical properties of different biological structures, allowing for high-contrast imaging. The result is a set of slices of neural tissue, 30-50nm thick, that can be independently imaged in the SEM. When positional order from slicing is combined with the raw image data (which takes the form of grey-scale images, as opposed to RGB or CMYK images), each individual value can be treated as a voxel, since it is indexed by three orthogonal coordinates. Important to note is that these voxels are anisotropic, meaning that they are larger in the z-dimension than they are in the x-y dimension. This introduces a computational complexity that can somewhat be compensated for at later stages of the pipeline.
+Given a physical volume of neural tissue, the first task in inferring tissue structure is to acquire some sort of digital representation of this tissue. While there are many techniques available for imaging biological tissue (e.g. light microscopy, electron microscopy, radiography, magnetic resonance imaging), typically the only way to acquire a representation of cell-level structures is by using a tunnelling electron microscope (TEM)\cite{Mielanczyk2015}. Before imaging, samples undergo considerable preparation: typically, they are embedded in a rigid medium that will allow them to be sliced with minimal distortion; additionally some sort of stain is applied to the tissue that affects the electrical properties of different biological structures, allowing for high-contrast imaging. The result is a set of slices of neural tissue, 30-50nm thick, that can be independently imaged in the SEM. When positional order from slicing is combined with the raw image data (which takes the form of grey-scale images, as opposed to RGB or CMYK images), each individual value can be treated as a voxel, since it is indexed by three orthogonal coordinates. Important to note is that these voxels are anisotropic, meaning that they are larger in the z-dimension than they are in the x-y dimension. This introduces a computational complexity that can somewhat be compensated for at later stages of the pipeline.
 
 Although the actual performance of this physical imaging process is far ouside the scope of this thesis, we mention the physical steps involved because the methods used in preparing and imaging biological slices have immediate consequences on the quality of the data that is fed into stages of the pipeline in which we are primarily interested. Because the imaging process is physical and involves structures at nano-scale, physical preparation of the sample can introduce various defects into the slices that show up in resulting images. The staining process, for instance, can inconsistently vary contrast throughout an image, and can produce large dark blotches in an image. The slicing procedure can create tears and folds in tissue, which manifest as discontinuities in the images, and can even physically translate slices hundreds of nanometers. And since neural tissue naturally contains significant quantities of water, samples are prone to dry inconsistently, resulting in elastic warping of cell-level structures (like a rubber sheet that has local stretching). Visual examples of some of these artifacts can be found in Figure \ref{fig:imaging_errors}
 
@@ -90,7 +91,7 @@ At its heart, the alignment problem is one of misrepresentative data. Ideally we
 
 While there are many theoretical ways of registering two images (registration here means alignment and distortion so that their features align accurately), most modern methods rely on establishing points of correspondence between two or more images, and distoring the images such that those points of correspondence end up at the same x-y coordinate in all images. It is generally believed that, given a high enough density of true correspondences throughout a stack, one can transform the data into a form that is pixel for pixel true to the actual cellular structure of a sample.\footnote{Intuitively, this makes sense, since structures within cells are physically connected, our notion of correspondence is essentially a description of how these structures are physically connected.} The transformations themselves can be parameterized as elastic transforms, which provide discrete interpolation for all voxels not labeled as correspondences.
 
-The problem, then, lies in actually determining these correspondences with high accuracy and high enough density for sample-accurate registration. One popular tool for achieving rough correspondences is \texttt{TrakEM2}, which provides functionality for registering generic images using a combination of the Scale Invariant Feature Transform (SIFT) and a global optimization algorithm. This algorithm uses no learned or otherwise domain-specific knowledge, and is widely used across computer vision applications to stitch arbitrary images together. This process is sufficient for establishing rough correspondences, but the noisy and varied nature of cellular structures means that, without any more domain-specific correspondence labeling the resulting image registration on a moderately distorted dataset will likely not result in transformations that are smooth or accurate.
+The problem, then, lies in actually determining these correspondences with high accuracy and high enough density for sample-accurate registration. One popular tool for achieving rough correspondences is \texttt{TrakEM2}, which provides functionality for registering generic images using a combination of the Scale Invariant Feature Transform (SIFT) and a global optimization \cite{Lowe1999}. This algorithm uses no learned or otherwise domain-specific knowledge, and is widely used across computer vision applications to stitch arbitrary images together. This process is sufficient for establishing rough correspondences, but the noisy and varied nature of cellular structures means that, without any more domain-specific correspondence labeling the resulting image registration on a moderately distorted dataset will likely not result in transformations that are smooth or accurate.
 
 The Seung Lab's current realignment techniques attempt to use domain-specific techniques to achieve correspondence. These techniques are typically hand-designed filters that draw on domain knowledge of the consitution of EM slices of neural tissue, and require a non-trivial amount of hand-tuning when applied. To compute a realignment, first a sparse set of correspondences are made at the macro level, and a rough realignment is iterateively computed (the rationale being that iteratively computing many fine realignments has slow convergence and is computationally unfeasable). Following this rough realignment, a much more granular set of correspondences are computed, and the stack is iteratively deformed a small number of times to compute a smooth, converged registration. This technique is quite effective, and leads to near-perfect registration, but requires a substantial amount of trained human input to determine both the parameters for the various correspondence filters and to correct obviously incorrect correspondences.
 
@@ -116,7 +117,7 @@ The specific network architectures that are used in this stage of the pipeline a
 \label{fig:fully_conv_net}
 \end{figure}
 
-The most conceptually simple type of network that is used is the standard convolutional network, depicted in Figure \ref{fig:fully_conv_net}. Standard convolutional nets typically involve several successive convolutions with small filters (e.g 3x3x3 filters) that perform either 'valid' or 'same' convolutions.\footnote{See Appendix B for more details about convolution.} After each convolution, a nonlinearity (e.g. ReLU) is applied, and every so often pooling layers are interspersed to alter the scale of the underlying feature maps. At the end of these alternating convolutions and poolings is a prediction, often the output of a sigmoid, that predicts a single pixel or patch of boundaries (or affinities, in the 3D case). Depending on the number of convolutions and poolings, the output pixel is determined by pixels within a certain field of view in the input image - that is, if one were to mathematically unrool the convolutions and poolings, only a certain number of pixels in the input image would be used to compute the prediction in the output image. In the N4 architecture applied in 2 dimensions, for instance, each pixel in the output prediction is influenced by pixels in a bounding box of 96x96 pixels. Architectures that are primarily Standard Convolutional Networks include N4 (2-dimensional), VD2D (2-dimensional), and VD2D-3D (3-dimensional).
+The most conceptually simple type of network that is used is the standard convolutional network, depicted in Figure \ref{fig:fully_conv_net}. Standard convolutional nets typically involve several successive convolutions with small filters (e.g 3x3x3 filters) that perform either 'valid' or 'same' convolutions.\footnote{See Appendix B for more details about convolution.} After each convolution, a nonlinearity (e.g. ReLU) is applied, and every so often pooling layers are interspersed to alter the scale of the underlying feature maps. At the end of these alternating convolutions and poolings is a prediction, often the output of a sigmoid, that predicts a single pixel or patch of boundaries (or affinities, in the 3D case). Depending on the number of convolutions and poolings, the output pixel is determined by pixels within a certain field of view in the input image - that is, if one were to mathematically unrool the convolutions and poolings, only a certain number of pixels in the input image would be used to compute the prediction in the output image. In the N4 architecture applied in 2 dimensions, for instance, each pixel in the output prediction is influenced by pixels in a bounding box of 96x96 pixels. Architectures that are primarily Standard Convolutional Networks include N4 (2-dimensional), VD2D (2-dimensional), and VD2D-3D (3-dimensional)\cite{Cirean,Lee}.
 
 \subsubsection{U-Net}
 
@@ -127,7 +128,7 @@ The most conceptually simple type of network that is used is the standard convol
 \label{fig:u_net}
 \end{figure}
 
-U-Net style architectures closely resemble autoencoders, in that they compress a representation of an input using convolutions and poolings, and then decompress that representation using convolutions and up-convolutions.  However, instead of trying to predict a perfect reconstruction of the input, the U-Net architeture attempts to reconstruct boundaries/affinities for the input image. One key feature of U-Nets is the symetrical use of skip connections - for every convolutional layer on the compressive (downward) pass, the output of those convolutions is added to the input of corresponding convolutional layers on the decompressive (upward) pass. This serves to force the net to quickly learn a set of affinities that look like the input. Much like Standard Convolutional Networks, every pixel in the output patch of a U-Net architecture can be affected by pixels in a certain field of view in the original input - modifying this field of view can often modify the quality of the results. Empirically, the predictions of U-Net architectures tend to be significantly smoother than fully convolutional architectures (although they may not be more accurate). A prototypical U-Net can be seen in Figure \ref{fig:u_net}. Architectures that are primarily based on the U-Net style are the original U-Net (2 dimensional) and 3D U-Net (3 dimensional). SegNet also resembles the U-Net architecture, in drawing inspiration from the autoencoder paradigm.
+U-Net style architectures closely resemble autoencoders, in that they compress a representation of an input using convolutions and poolings, and then decompress that representation using convolutions and up-convolutions.  However, instead of trying to predict a perfect reconstruction of the input, the U-Net architeture attempts to reconstruct boundaries/affinities for the input image. One key feature of U-Nets is the symetrical use of skip connections - for every convolutional layer on the compressive (downward) pass, the output of those convolutions is added to the input of corresponding convolutional layers on the decompressive (upward) pass. This serves to force the net to quickly learn a set of affinities that look like the input. Much like Standard Convolutional Networks, every pixel in the output patch of a U-Net architecture can be affected by pixels in a certain field of view in the original input - modifying this field of view can often modify the quality of the results. Empirically, the predictions of U-Net architectures tend to be significantly smoother than fully convolutional architectures (although they may not be more accurate). A prototypical U-Net can be seen in Figure \ref{fig:u_net}. Architectures that are primarily based on the U-Net style are the original U-Net (2 dimensional), 3D U-Net (3 dimensional), and V-Net. SegNet also resembles the U-Net architecture, in drawing inspiration from the autoencoder paradigm\cite{Ronneberger2015,Cicek2016,Milletari2016,Badrinarayanan2015}.
 
 \subsubsection{Residual Nets}
 
@@ -138,10 +139,10 @@ U-Net style architectures closely resemble autoencoders, in that they compress a
 \label{fig:residual_net}
 \end{figure}
 
-Residual Networks draw on a similar idea as U-Net, in that convolutional layers should be able to directly influence layers that do not directly follow them in the architecture. As shown in Figure \ref{fig:residual_net}, Residual Nets add skip connections that jump over one (or more) sets of convolutions. Deeper nets are, in general, quite difficult to train, and the use of residual connections often increases the speed of training for deeper architectures.
+Residual Networks draw on a similar idea as U-Net, in that convolutional layers should be able to directly influence layers that do not directly follow them in the architecture\cite{He2015}. As shown in Figure \ref{fig:residual_net}, Residual Nets add skip connections that jump over one (or more) sets of convolutions. Deeper nets are, in general, quite difficult to train, and the use of residual connections often increases the speed of training for deeper architectures.
 
 \subsubsection{Flood-Filling Networks}
-Flood-Filling Networks (FFNs) take a different approach to the prediction task. Rather than predict whether a pixel in the output is a boundary or not on a given input, FFNs are given an input patch and an x-y coordinate, and output a pixel mask for that patch that represents whether a pixel in the output is in the same body as the input x-y coordinate. If a particular object is sampled such that the output patches completely cover the object, a full segmentation of that object can be achieved (successive sample patches are chosen by a recurrent neural net (RNN)). Typically, this map is predicted with several convolutions, although architectures are varied. While we will not explore FFNs any further, as they are outside the scope of the research presented in this paper, they are noteworthy in that directly predict segmentation, rather than an intermediate (and thus require substantially less postprocessing than other menthods).
+Flood-Filling Networks (FFNs) take a different approach to the prediction task. Rather than predict whether a pixel in the output is a boundary or not on a given input, FFNs are given an input patch and an x-y coordinate, and output a pixel mask for that patch that represents whether a pixel in the output is in the same body as the input x-y coordinate\cite{Januszewski2016}. If a particular object is sampled such that the output patches completely cover the object, a full segmentation of that object can be achieved (successive sample patches are chosen by a recurrent neural net (RNN)). Typically, this map is predicted with several convolutions, although architectures are varied. While we will not explore FFNs any further, as they are outside the scope of the research presented in this paper, they are noteworthy in that directly predict segmentation, rather than an intermediate (and thus require substantially less postprocessing than other menthods).
 
 
 \subsubsection{Typical Errors}
