--- a/thesis.tex
+++ b/thesis.tex
@@ -62,6 +62,7 @@
 
 %%% For figures
 \usepackage{graphicx}
+\usepackage{amsmath,bm}
 %\usepackage{subfig,rotate}
 
 %%% for comments
@@ -286,6 +287,6 @@
 \addcontentsline{toc}{chapter}{Bibliography}
 
 % include your .bib file
-\bibliography{references,SeungLab}
+\bibliography{SeungLab}
 
 \end{document}
